fix section gap too large issue

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -33,8 +33,8 @@
     /* 120px */
     --spacing-mobile-margin: 1.25rem;
     /* 20px */
-    --spacing-section: 6.25rem;
-    /* 100px */
+    --spacing-section: 3.125rem;
+    /* 50px */
     --spacing-component: 2rem;
     /* 32px */
     --spacing-paragraph: 1.5rem;
